# DjanngoBasicRegister

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
project/: .env.example  manage.py
project/MAIN_APP/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
project/MAIN_APP/settings/: __init__.py  django.py
project/MAIN_APP/settings/contrib/: __init__.py  celery.py  email.py  jwt.py  swagger.py
project/apps/accounts/api/v1/: urls.py
project/apps/accounts/api/v1/serializers/: register.py  user.py
project/apps/accounts/api/v1/views/: register.py  user.py
project/apps/accounts/migrations/: 0001_initial.py
project/apps/accounts/models/: __init__.py
project/apps/accounts/services/: email.py  user.py
project/apps/accounts/tasks/: email.py
project/apps/accounts/templates/: email_user_creation.html
